--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ assets/raw
 assets/portraits
 modules/tests
 modules/old_versions
-
+databases/backups
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
